--- a/packages/base/blockquote-base-meta/demo/index.html
+++ b/packages/base/blockquote-base-meta/demo/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Demo blockquote-base-meta</title>
+    <title>Demo - blockquote-base-meta</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
     <style>
