--- a/packages/controllers/blockquote-controller-rxjs/demo/basic.html
+++ b/packages/controllers/blockquote-controller-rxjs/demo/basic.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Basic - blockquote-controller-rxjs</title>
     <style>
       :root {
         font: normal medium/1.25 sans-serif;
@@ -20,6 +20,10 @@
         clip: rect(0, 0, 0, 0);
         white-space: nowrap;
         border: 0;
+      }
+
+      body {
+        background-color: #fff;
       }
     </style>
   </head>
