--- a/packages/mixins/blockquote-mixin-slot-content/demo/index.html
+++ b/packages/mixins/blockquote-mixin-slot-content/demo/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Demo blockquote-mixin-slot-content</title>
+    <title>Demo - blockquote-mixin-slot-content</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
     <style>
@@ -18,7 +18,7 @@
       <template data-src="./basic.html" data-option="Basic"></template>
       <template data-src="./slots-on-the-fly.html" data-option="Slots on the fly"></template>
       <template
-        data-src="./composition-with-slots-.html"
+        data-src="./composition-with-slots.html"
         data-option="Composition with slots"
       ></template>
     </blockquote-base-embedded-webview>
