refactor(blockquote-directive-svg-to-data-image): update demo

--- a/packages/directives/blockquote-directive-svg-to-data-image/demo/basic.html
+++ b/packages/directives/blockquote-directive-svg-to-data-image/demo/basic.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Demo blockquote-directive-svg-to-data-image</title>
+    <title>Basic - blockquote-directive-svg-to-data-image</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
     <style>
@@ -19,6 +19,11 @@
         clip: rect(0, 0, 0, 0);
         white-space: nowrap;
         border: 0;
+      }
+
+      body {
+        background-color: #fff;
+        margin-top: 4rem;
       }
     </style>
   </head>
@@ -46,7 +51,7 @@
               width: 6.25rem;
               height: 6.25rem;
               border-radius: 50%;
-              background: rgba(180, 180, 180, 0.62) no-repeat center center / cover;
+              background: center center / cover no-repeat rgb(255, 235, 59);
             }
           `;
         }
