refactor: remove base

--- a/site/blockquote-mixin-slot-content/index.html
+++ b/site/blockquote-mixin-slot-content/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html lang="en"><head>
-    <title>Demo - blockquote-mixin-slot-content</title><base href="blockquote-mixin-slot-content/">
+    <title>Demo - blockquote-mixin-slot-content</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <script src="./web_modules/@ungap/global-this/index.js"></script>
