--- a/site/blockquote-base-meta/index.html
+++ b/site/blockquote-base-meta/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html lang="en"><head>
-    <title>Demo - blockquote-base-meta</title><base href="blockquote-base-meta/">
+    <title>Demo - blockquote-base-meta</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <script src="./web_modules/@ungap/global-this/index.js"></script>
