--- a/site/blockquote-directive-svg-to-data-image/index.html
+++ b/site/blockquote-directive-svg-to-data-image/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html lang="en"><head>
-    <title>Demo - blockquote-directive-svg-to-data-image</title><base href="blockquote-directive-svg-to-data-image/">
+    <title>Demo - blockquote-directive-svg-to-data-image</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
         <script src="./web_modules/@ungap/global-this/index.js"></script>
