fix(blockquote-base-embedded-webview): update demo

--- a/packages/base/blockquote-base-embedded-webview/demo/base.html
+++ b/packages/base/blockquote-base-embedded-webview/demo/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Basic - blockquote-base-embedded-webview</title>
+    <title>Base - blockquote-base-embedded-webview</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
     <style>
@@ -29,7 +29,7 @@
   <body>
     <main>
       <h1 class="sr-only">blockquote-base-embedded-webview</h1>
-      <p>basic.html</p>
+      <p>base.html</p>
     </main>
   </body>
 </html>
