--- a/packages/base/blockquote-base-embedded-webview/demo/index.html
+++ b/packages/base/blockquote-base-embedded-webview/demo/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <blockquote-base-embedded-webview heading="blockquote-base-embedded-webview">
-      <template data-src="./basic.html" data-option="Basic"></template>
+      <template data-src="./base.html" data-option="Base"></template>
       <template data-src="./other.html" data-option="Other"></template>
     </blockquote-base-embedded-webview>
 
