--- a/packages/base/blockquote-base-meta/demo/index.html
+++ b/packages/base/blockquote-base-meta/demo/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <blockquote-base-embedded-webview screen-size-selected="5" heading="blockquote-base-meta">
-      <template data-src="./basic.html" data-option="Basic"></template>
+      <template data-src="./base.html" data-option="Base"></template>
     </blockquote-base-embedded-webview>
     <script type="module">
       // eslint-disable-next-line import/no-extraneous-dependencies
