--- a/packages/controllers/blockquote-controller-rxjs/demo/base.html
+++ b/packages/controllers/blockquote-controller-rxjs/demo/base.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Basic - blockquote-controller-rxjs</title>
+    <title>Base - blockquote-controller-rxjs</title>
     <style>
       :root {
         font: normal medium/1.25 sans-serif;
