--- a/packages/controllers/blockquote-controller-rxjs/demo/index.html
+++ b/packages/controllers/blockquote-controller-rxjs/demo/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <blockquote-base-embedded-webview heading="blockquote-controller-rxjs">
-      <template data-src="./basic.html" data-option="Basic"></template>
+      <template data-src="./base.html" data-option="Base"></template>
     </blockquote-base-embedded-webview>
     <script type="module">
       // eslint-disable-next-line import/no-extraneous-dependencies
