fix(blockquote-mixin-slot-content): update demo

--- a/packages/mixins/blockquote-mixin-slot-content/demo/base.html
+++ b/packages/mixins/blockquote-mixin-slot-content/demo/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Basic - blockquote-mixin-slot-content</title>
+    <title>Base - blockquote-mixin-slot-content</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
     <style>
