--- a/packages/mixins/blockquote-mixin-slot-content/demo/index.html
+++ b/packages/mixins/blockquote-mixin-slot-content/demo/index.html
@@ -14,8 +14,8 @@
     </style>
   </head>
   <body>
-    <blockquote-base-embedded-webview heading="blockquote-controller-rxjs">
-      <template data-src="./basic.html" data-option="Basic"></template>
+    <blockquote-base-embedded-webview heading="blockquote-mixin-slot-content">
+      <template data-src="./base.html" data-option="Base"></template>
       <template data-src="./slots-on-the-fly.html" data-option="Slots on the fly"></template>
       <template
         data-src="./composition-with-slots.html"
