chore: update site

--- a/site/blockquote-base-meta/index.html
+++ b/site/blockquote-base-meta/index.html
@@ -15,9 +15,9 @@
   </head>
   <body>
     <blockquote-base-embedded-webview screen-size-selected="5" heading="blockquote-base-meta">
-      <template data-src="./basic.html" data-option="Basic"></template>
+      <template data-src="./base.html" data-option="Base"></template>
     </blockquote-base-embedded-webview>
     
   
 
-<script type="module" src="./assets/inline-module-afc12870e222c2d823cdbcdc63d14554.c5d0b8a8.js"></script></body></html>
+<script type="module" src="./assets/inline-module-afc12870e222c2d823cdbcdc63d14554.d32dcbdf.js"></script></body></html>
