--- a/site/blockquote-base-style-helpers/index.html
+++ b/site/blockquote-base-style-helpers/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html lang="en"><head>
-    <title>Demo - blockquote-directive-svg-to-data-image</title>
+    <title>Demo - blockquote-base-style-helpers</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
         <script src="./web_modules/@ungap/global-this/index.js"></script>
@@ -17,10 +17,11 @@
     </style>
   </head>
   <body>
-    <blockquote-base-embedded-webview heading="blockquote-directive-svg-to-data-image">
-      <template data-src="./base.html" data-option="Base"></template>
+    <blockquote-base-embedded-webview heading="blockquote-base-style-helpers">
+      <template data-src="./document-styles.html" data-option="Document Styles"></template>
+      <template data-src="./shared-styles.html" data-option="Shared Styles"></template>
     </blockquote-base-embedded-webview>
     
   
 
-<script type="module" src="./assets/inline-module-afc12870e222c2d823cdbcdc63d14554.7795745a.js"></script></body></html>
+<script type="module" src="./assets/inline-module-afc12870e222c2d823cdbcdc63d14554.3d819f9c.js"></script></body></html>
