--- a/site/blockquote-directive-svg-to-data-image/base.html
+++ b/site/blockquote-directive-svg-to-data-image/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html lang="en"><head>
-    <title>Basic - blockquote-directive-svg-to-data-image</title>
+    <title>Base - blockquote-directive-svg-to-data-image</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
         <script src="./web_modules/@ungap/global-this/index.js"></script>
@@ -39,4 +39,4 @@
     
   
 
-<script type="module" src="./assets/inline-module-bd985ef938b62efe5150d011269ae133.7d7573b2.js"></script></body></html>
+<script type="module" src="./assets/inline-module-bd985ef938b62efe5150d011269ae133.86402255.js"></script></body></html>
