--- a/site/blockquote-mixin-slot-content/index.html
+++ b/site/blockquote-mixin-slot-content/index.html
@@ -14,12 +14,12 @@
     </style>
   </head>
   <body>
-    <blockquote-base-embedded-webview heading="blockquote-controller-rxjs">
-      <template data-src="./basic.html" data-option="Basic"></template>
+    <blockquote-base-embedded-webview heading="blockquote-mixin-slot-content">
+      <template data-src="./base.html" data-option="Base"></template>
       <template data-src="./slots-on-the-fly.html" data-option="Slots on the fly"></template>
       <template data-src="./composition-with-slots.html" data-option="Composition with slots"></template>
     </blockquote-base-embedded-webview>
     
   
 
-<script type="module" src="./assets/inline-module-afc12870e222c2d823cdbcdc63d14554.7afd4213.js"></script></body></html>
+<script type="module" src="./assets/inline-module-afc12870e222c2d823cdbcdc63d14554.6b29ee7d.js"></script></body></html>
