--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+<!DOCTYPE html><html lang="en"><head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Blockquote - Web Components</title>
     <style>
       :root {
@@ -32,30 +30,7 @@
   <body>
     <h1 class="title">Blockquote - Web Components</h1>
 
-    <ol>
-      <li>
-        <a href="blockquote-base-embedded-webview/index.html"
-          >blockquote-base-embedded-webview</a
-        >
-      </li>
-      <li>
-        <a href="blockquote-controller-rxjs/index.html"
-          >blockquote-controller-rxjs</a
-        >
-      </li>
-      <li>
-        <a href="blockquote-directive-svg-to-data-image/index.html"
-          >blockquote-directive-svg-to-data-image</a
-        >
-      </li>
-      <li>
-        <a href="blockquote-base-meta/index.html">blockquote-base-meta</a>
-      </li>
-      <li>
-        <a href="blockquote-mixin-slot-content/index.html"
-          >blockquote-mixin-slot-content</a
-        >
-      </li>
-    </ol>
-  </body>
-</html>
+    
+  
+
+<ol><li><a href="blockquote-base-style-helpers/index.html">blockquote-base-style-helpers</a></li><li><a href="blockquote-base-embedded-webview/index.html">blockquote-base-embedded-webview</a></li><li><a href="blockquote-base-meta/index.html">blockquote-base-meta</a></li><li><a href="blockquote-controller-rxjs/index.html">blockquote-controller-rxjs</a></li><li><a href="blockquote-directive-svg-to-data-image/index.html">blockquote-directive-svg-to-data-image</a></li><li><a href="blockquote-mixin-slot-content/index.html">blockquote-mixin-slot-content</a></li></ol></body></html>
