--- a/site/blockquote-base-embedded-webview/base.html
+++ b/site/blockquote-base-embedded-webview/base.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html><html lang="en"><head>
+    <title>Base - blockquote-base-embedded-webview</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <script src="./web_modules/@ungap/global-this/index.js"></script>
     <script src="./web_modules/tiny-array-flat-polyfill/tiny-array-flat-polyfill.min.js"></script>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Basic - blockquote-controller-rxjs</title>
     <style>
       :root {
         font: normal medium/1.25 sans-serif;
@@ -29,10 +28,9 @@
   </head>
   <body>
     <main>
-      <h1 class="sr-only">blockquote-controller-rxjs-demo</h1>
-      <blockquote-controller-rxjs-demo></blockquote-controller-rxjs-demo>
+      <h1 class="sr-only">blockquote-base-embedded-webview</h1>
+      <p>base.html</p>
     </main>
-    
   
 
-<script type="module" src="./assets/inline-module-4ad152a15328129e57f6057ccfd641b7.af738801.js"></script></body></html>
+</body></html>
