--- a/site/blockquote-base-embedded-webview/index.html
+++ b/site/blockquote-base-embedded-webview/index.html
@@ -15,11 +15,11 @@
   </head>
   <body>
     <blockquote-base-embedded-webview heading="blockquote-base-embedded-webview">
-      <template data-src="./basic.html" data-option="Basic"></template>
+      <template data-src="./base.html" data-option="Base"></template>
       <template data-src="./other.html" data-option="Other"></template>
     </blockquote-base-embedded-webview>
 
     
   
 
-<script type="module" src="./assets/blockquote-base-embedded-webview.96a0fed8.js"></script></body></html>
+<script type="module" src="./assets/blockquote-base-embedded-webview.9996118d.js"></script></body></html>
