--- a/site/blockquote-base-meta/base.html
+++ b/site/blockquote-base-meta/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html lang="en"><head>
-    <title>Basic - Demo blockquote-base-meta</title>
+    <title>Base - Demo blockquote-base-meta</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <script src="./web_modules/@ungap/global-this/index.js"></script>
@@ -106,4 +106,4 @@
     </main>
   
 
-<script type="module" src="./assets/inline-module-e0057d113f8eb8f695fded7628ea69cb.9ae6a25d.js"></script></body></html>
+<script type="module" src="./assets/inline-module-e0057d113f8eb8f695fded7628ea69cb.dd4ef3c0.js"></script></body></html>
