--- a/site/blockquote-controller-rxjs/base.html
+++ b/site/blockquote-controller-rxjs/base.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html><html lang="en"><head>
-    <title>Basic - blockquote-mixin-slot-content</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <script src="./web_modules/@ungap/global-this/index.js"></script>
     <script src="./web_modules/tiny-array-flat-polyfill/tiny-array-flat-polyfill.min.js"></script>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Base - blockquote-controller-rxjs</title>
     <style>
       :root {
         font: normal medium/1.25 sans-serif;
-      }
-
-      body {
-        background-color: #fff;
       }
 
       [data-embedded] .sr-only {
@@ -24,24 +21,18 @@
         white-space: nowrap;
         border: 0;
       }
+
+      body {
+        background-color: #fff;
+      }
     </style>
   </head>
   <body>
     <main>
-      <h1 class="sr-only">blockquote-mixin-slot-content</h1>
-      <slot-element>
-        <p>sdfas</p>
-        <p>2jfie</p>
-        <p>ramd5</p>
-        <p>domep</p>
-      </slot-element>
-      <hr>
-      <div class="actions">
-        <button id="add">Add item</button>
-        <button id="remove">Remove item</button>
-      </div>
+      <h1 class="sr-only">blockquote-controller-rxjs-demo</h1>
+      <blockquote-controller-rxjs-demo></blockquote-controller-rxjs-demo>
     </main>
     
   
 
-<script type="module" src="./assets/inline-module-48982e212946f3734e729a3dcf1fb925.83205df0.js"></script></body></html>
+<script type="module" src="./assets/inline-module-4ad152a15328129e57f6057ccfd641b7.17b24c56.js"></script></body></html>
