--- a/site/blockquote-controller-rxjs/index.html
+++ b/site/blockquote-controller-rxjs/index.html
@@ -15,9 +15,9 @@
   </head>
   <body>
     <blockquote-base-embedded-webview heading="blockquote-controller-rxjs">
-      <template data-src="./basic.html" data-option="Basic"></template>
+      <template data-src="./base.html" data-option="Base"></template>
     </blockquote-base-embedded-webview>
     
   
 
-<script type="module" src="./assets/inline-module-afc12870e222c2d823cdbcdc63d14554.7afd4213.js"></script></body></html>
+<script type="module" src="./assets/inline-module-afc12870e222c2d823cdbcdc63d14554.6b29ee7d.js"></script></body></html>
