--- a/site/blockquote-mixin-slot-content/base.html
+++ b/site/blockquote-mixin-slot-content/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html lang="en"><head>
-    <title>Basic - blockquote-base-embedded-webview</title>
+    <title>Base - blockquote-mixin-slot-content</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <script src="./web_modules/@ungap/global-this/index.js"></script>
@@ -7,6 +7,10 @@
     <style>
       :root {
         font: normal medium/1.25 sans-serif;
+      }
+
+      body {
+        background-color: #fff;
       }
 
       [data-embedded] .sr-only {
@@ -20,17 +24,24 @@
         white-space: nowrap;
         border: 0;
       }
-
-      body {
-        background-color: #fff;
-      }
     </style>
   </head>
   <body>
     <main>
-      <h1 class="sr-only">blockquote-base-embedded-webview</h1>
-      <p>basic.html</p>
+      <h1 class="sr-only">blockquote-mixin-slot-content</h1>
+      <slot-element>
+        <p>sdfas</p>
+        <p>2jfie</p>
+        <p>ramd5</p>
+        <p>domep</p>
+      </slot-element>
+      <hr>
+      <div class="actions">
+        <button id="add">Add item</button>
+        <button id="remove">Remove item</button>
+      </div>
     </main>
+    
   
 
-</body></html>
+<script type="module" src="./assets/inline-module-48982e212946f3734e729a3dcf1fb925.0c693f70.js"></script></body></html>
