chore: update site

--- a/site/blockquote-base-embedded-webview/index.html
+++ b/site/blockquote-base-embedded-webview/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <script src="./web_modules/@ungap/global-this/index.js"></script>
     <script src="./web_modules/tiny-array-flat-polyfill/tiny-array-flat-polyfill.min.js"></script>
+    <script src="./web_modules/lit/polyfill-support.js"></script>
+    <script src="./web_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+    <script src="./web_modules/@webcomponents/shadycss/custom-style-interface.min.js"></script>
     <style>
       html,
       body {
@@ -22,4 +25,4 @@
     
   
 
-<script type="module" src="./assets/blockquote-base-embedded-webview.9996118d.js"></script></body></html>
+<script type="module" src="./assets/blockquote-base-embedded-webview.1e722e1b.js"></script></body></html>
