--- a/site/blockquote-controller-rxjs/base.html
+++ b/site/blockquote-controller-rxjs/base.html
@@ -2,6 +2,9 @@
     <meta charset="utf-8">
     <script src="./web_modules/@ungap/global-this/index.js"></script>
     <script src="./web_modules/tiny-array-flat-polyfill/tiny-array-flat-polyfill.min.js"></script>
+    <script src="./web_modules/lit/polyfill-support.js"></script>
+    <script src="./web_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+    <script src="./web_modules/@webcomponents/shadycss/custom-style-interface.min.js"></script>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Base - blockquote-controller-rxjs</title>
@@ -35,4 +38,4 @@
     
   
 
-<script type="module" src="./assets/inline-module-4ad152a15328129e57f6057ccfd641b7.17b24c56.js"></script></body></html>
+<script type="module" src="./assets/inline-module-4ad152a15328129e57f6057ccfd641b7.6bcd99e7.js"></script></body></html>
