--- a/site/blockquote-controller-rxjs/index.html
+++ b/site/blockquote-controller-rxjs/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <script src="./web_modules/@ungap/global-this/index.js"></script>
     <script src="./web_modules/tiny-array-flat-polyfill/tiny-array-flat-polyfill.min.js"></script>
+    <script src="./web_modules/lit/polyfill-support.js"></script>
+    <script src="./web_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+    <script src="./web_modules/@webcomponents/shadycss/custom-style-interface.min.js"></script>
     <style>
       html,
       body {
@@ -20,4 +23,4 @@
     
   
 
-<script type="module" src="./assets/inline-module-afc12870e222c2d823cdbcdc63d14554.6b29ee7d.js"></script></body></html>
+<script type="module" src="./assets/inline-module-afc12870e222c2d823cdbcdc63d14554.cd155c3a.js"></script></body></html>
