--- a/site/blockquote-base-meta/index.html
+++ b/site/blockquote-base-meta/index.html
@@ -2,8 +2,11 @@
     <title>Demo - blockquote-base-meta</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
-    <script src="./web_modules/@ungap/global-this/index.js"></script>
-    <script src="./web_modules/tiny-array-flat-polyfill/tiny-array-flat-polyfill.min.js"></script>
+      <script src="./web_modules/@ungap/global-this/index.js"></script>
+      <script src="./web_modules/tiny-array-flat-polyfill/tiny-array-flat-polyfill.min.js"></script>
+      <script src="./web_modules/lit/polyfill-support.js"></script>
+      <script src="./web_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+      <script src="./web_modules/@webcomponents/shadycss/custom-style-interface.min.js"></script>
     <style>
       html,
       body {
@@ -20,4 +23,4 @@
     
   
 
-<script type="module" src="./assets/inline-module-afc12870e222c2d823cdbcdc63d14554.d32dcbdf.js"></script></body></html>
+<script type="module" src="./assets/inline-module-afc12870e222c2d823cdbcdc63d14554.1f3efc36.js"></script></body></html>
