--- a/site/blockquote-mixin-slot-content/base.html
+++ b/site/blockquote-mixin-slot-content/base.html
@@ -2,8 +2,11 @@
     <title>Base - blockquote-mixin-slot-content</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
-    <script src="./web_modules/@ungap/global-this/index.js"></script>
-    <script src="./web_modules/tiny-array-flat-polyfill/tiny-array-flat-polyfill.min.js"></script>
+      <script src="./web_modules/@ungap/global-this/index.js"></script>
+      <script src="./web_modules/tiny-array-flat-polyfill/tiny-array-flat-polyfill.min.js"></script>
+      <script src="./web_modules/lit/polyfill-support.js"></script>
+      <script src="./web_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+      <script src="./web_modules/@webcomponents/shadycss/custom-style-interface.min.js"></script>
     <style>
       :root {
         font: normal medium/1.25 sans-serif;
@@ -44,4 +47,4 @@
     
   
 
-<script type="module" src="./assets/inline-module-48982e212946f3734e729a3dcf1fb925.0c693f70.js"></script></body></html>
+<script type="module" src="./assets/inline-module-48982e212946f3734e729a3dcf1fb925.eb68f614.js"></script></body></html>
