--- a/site/blockquote-mixin-slot-content/composition-with-slots.html
+++ b/site/blockquote-mixin-slot-content/composition-with-slots.html
@@ -2,8 +2,11 @@
     <title>Composition with slots - blockquote-mixin-slot-content</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
-    <script src="./web_modules/@ungap/global-this/index.js"></script>
-    <script src="./web_modules/tiny-array-flat-polyfill/tiny-array-flat-polyfill.min.js"></script>
+      <script src="./web_modules/@ungap/global-this/index.js"></script>
+      <script src="./web_modules/tiny-array-flat-polyfill/tiny-array-flat-polyfill.min.js"></script>
+      <script src="./web_modules/lit/polyfill-support.js"></script>
+      <script src="./web_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+      <script src="./web_modules/@webcomponents/shadycss/custom-style-interface.min.js"></script>
     <style>
       :root {
         font: normal medium/1.25 sans-serif;
@@ -41,4 +44,4 @@
     
   
 
-<script type="module" src="./assets/inline-module-26a0b80a033a20935476c72c9cae69d2.68bdbd05.js"></script></body></html>
+<script type="module" src="./assets/inline-module-26a0b80a033a20935476c72c9cae69d2.4e465ef7.js"></script></body></html>
