--- a/site/blockquote-mixin-slot-content/slots-on-the-fly.html
+++ b/site/blockquote-mixin-slot-content/slots-on-the-fly.html
@@ -2,8 +2,11 @@
     <title>Slots on the fly - blockquote-mixin-slot-content</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
-    <script src="./web_modules/@ungap/global-this/index.js"></script>
-    <script src="./web_modules/tiny-array-flat-polyfill/tiny-array-flat-polyfill.min.js"></script>
+      <script src="./web_modules/@ungap/global-this/index.js"></script>
+      <script src="./web_modules/tiny-array-flat-polyfill/tiny-array-flat-polyfill.min.js"></script>
+      <script src="./web_modules/lit/polyfill-support.js"></script>
+      <script src="./web_modules/@webcomponents/webcomponentsjs/webcomponents-loader.js"></script>
+      <script src="./web_modules/@webcomponents/shadycss/custom-style-interface.min.js"></script>
     <style>
       :root {
         font: normal medium/1.25 sans-serif;
@@ -60,4 +63,4 @@
     
   
 
-<script type="module" src="./assets/inline-module-2cd677301c60f7be147f6fbae3747bca.7800eb27.js"></script></body></html>
+<script type="module" src="./assets/inline-module-2cd677301c60f7be147f6fbae3747bca.71b35d71.js"></script></body></html>
