--- a/packages/base/blockquote-base-embedded-webview/demo/index.html
+++ b/packages/base/blockquote-base-embedded-webview/demo/index.html
@@ -15,8 +15,16 @@
   </head>
   <body>
     <blockquote-base-embedded-webview heading="blockquote-base-embedded-webview">
-      <template data-src="./base.html" data-option="Base"></template>
-      <template data-src="./other.html" data-option="Other"></template>
+      <template
+        data-src="./base.html"
+        data-option="Base"
+        data-description="base - description"
+      ></template>
+      <template
+        data-src="./other.html"
+        data-option="Other"
+        data-description="other - description"
+      ></template>
     </blockquote-base-embedded-webview>
 
     <script type="module" src="../define/blockquote-base-embedded-webview.js"></script>
