chore: update site

--- a/site/blockquote-base-embedded-webview/index.html
+++ b/site/blockquote-base-embedded-webview/index.html
@@ -18,11 +18,11 @@
   </head>
   <body>
     <blockquote-base-embedded-webview heading="blockquote-base-embedded-webview">
-      <template data-src="./base.html" data-option="Base"></template>
-      <template data-src="./other.html" data-option="Other"></template>
+      <template data-src="./base.html" data-option="Base" data-description="base - description"></template>
+      <template data-src="./other.html" data-option="Other" data-description="other - description"></template>
     </blockquote-base-embedded-webview>
 
     
   
 
-<script type="module" src="./assets/blockquote-base-embedded-webview.d9c2636b.js"></script></body></html>
+<script type="module" src="./assets/blockquote-base-embedded-webview.881ebdeb.js"></script></body></html>
