--- a/packages/base/blockquote-base-embedded-webview/demo/other.html
+++ b/packages/base/blockquote-base-embedded-webview/demo/other.html
@@ -22,7 +22,7 @@
       }
 
       body {
-        background-color: #fff;
+        background-color: rgb(220, 220, 220);
       }
     </style>
   </head>
