feat(blockquote-mixin-slot-content): add assignedSlot

--- a/packages/mixins/blockquote-mixin-slot-content/demo/slots-on-the-fly.html
+++ b/packages/mixins/blockquote-mixin-slot-content/demo/slots-on-the-fly.html
@@ -135,7 +135,7 @@
             'assignedNodes ==>',
             detail.assignedNodesContent.assignedNodes,
             '-',
-            detail.slotName,
+            detail.assignedSlotContent.slotName,
           );
         }
 
