--- a/packages/directives/blockquote-directive-svg-to-data-image/demo/base.html
+++ b/packages/directives/blockquote-directive-svg-to-data-image/demo/base.html
@@ -23,7 +23,7 @@
 
       body {
         background-color: #fff;
-        margin-top: 4rem;
+        margin-top: 2rem;
       }
     </style>
   </head>
@@ -42,16 +42,41 @@
           return css`
             :host {
               display: flex;
+              flex-direction: column;
               align-items: center;
               justify-content: center;
               box-sizing: border-box;
             }
 
-            div {
+            a {
+              display: block;
               width: 6.25rem;
               height: 6.25rem;
               border-radius: 50%;
-              background: center center / cover no-repeat rgb(255, 235, 59);
+              background: center center / cover no-repeat;
+            }
+
+            /*
+              https://zellwk.com/blog/style-hover-focus-active-states
+              https://bugs.webkit.org/show_bug.cgi?id=20807
+            */
+            a:hover,
+            a:focus,
+            a:active {
+              outline: 2px dashed rgb(184, 184, 184);
+              outline-offset: 2px;
+            }
+
+            .sr-only {
+              position: absolute;
+              width: 1px;
+              height: 1px;
+              padding: 0;
+              margin: -1px;
+              overflow: hidden;
+              clip: rect(0, 0, 0, 0);
+              white-space: nowrap;
+              border: 0;
             }
           `;
         }
@@ -62,15 +87,19 @@
             .substring(
               2,
               10,
-            )}" width="51" height="51" xmlns="http://www.w3.org/2000/svg"><path d="M25.5 0C11.417 0 0 11.417 0 25.5S11.417 51 25.5 51 51 39.583 51 25.5 39.583 0 25.5 0zm-.385 5.064a3.3 3.3 0 0 1 3.307 3.291 3.304 3.304 0 0 1-3.307 3.306 3.3 3.3 0 0 1-3.29-3.306 3.29 3.29 0 0 1 3.29-3.291zm14.289 10.652l-9.809 1.24.005 9.817 4.755 15.867a1.85 1.85 0 0 1-1.344 2.252c-.989.25-2.003-.3-2.252-1.298l-4.87-14.443h-1.498l-4.48 14.742c-.374.964-1.448 1.404-2.407 1.03-.954-.37-1.533-1.454-1.158-2.418l4.115-15.572v-9.978l-9.04-1.228c-.928-.075-1.558-.89-1.483-1.818.07-.934.914-1.628 1.838-1.554l10.982.944h4.815l11.69-.963a1.68 1.68 0 0 1 1.749 1.623c.04.924-.68 1.718-1.608 1.758z"></path></svg>`;
+            )}" xmlns="http://www.w3.org/2000/svg" width="200" height="200" focusable="false" role="presentation" viewBox="0 0 200 200"><circle fill="#202020" cx="100" cy="100" r="100"></circle><g fill="#fff"><circle cx="100" cy="35.819" r="14.926"></circle><path d="M164.771 50.73a7.459 7.459 0 0 0-8.814-5.802L100 56.465 44.043 44.928a7.46 7.46 0 0 0-8.815 5.802 7.461 7.461 0 0 0 5.803 8.815l41.805 8.62v45.563l-11.782 56.387a7.46 7.46 0 0 0 5.778 8.83c.515.107 1.028.16 1.535.16a7.467 7.467 0 0 0 7.297-5.938l12.015-57.498c.224-1.188 1.086-2.237 2.323-2.237 1.236 0 2.123 1.049 2.322 2.237l12.016 57.498a7.464 7.464 0 0 0 8.831 5.778 7.458 7.458 0 0 0 5.776-8.83l-11.781-56.391V68.166l41.807-8.62a7.46 7.46 0 0 0 5.798-8.816z"></path></g></svg>`;
         }
 
         render() {
           return html`
-            <div
-              aria-hidden="true"
+            <a
+              target="_blank"
+              rel="noopener noreferrer"
+              href="https://accessibility-club.org/"
               style="background-image: url('${blockquoteDirectiveSvgToDataImage(this._svgTag)}');"
-            ></div>
+            >
+              <span class="sr-only">Accessibility Club</span>
+            </a>
           `;
         }
       }
