--- a/packages/directives/blockquote-directive-svg-to-data-image/demo/index.html
+++ b/packages/directives/blockquote-directive-svg-to-data-image/demo/index.html
@@ -16,6 +16,7 @@
   <body>
     <blockquote-base-embedded-webview heading="blockquote-directive-svg-to-data-image">
       <template data-src="./base.html" data-option="Base"></template>
+      <template data-src="./simple.html" data-option="Simple"></template>
     </blockquote-base-embedded-webview>
     <script type="module">
       // eslint-disable-next-line import/no-extraneous-dependencies
