chore: update site

--- a/site/blockquote-directive-svg-to-data-image/index.html
+++ b/site/blockquote-directive-svg-to-data-image/index.html
@@ -19,8 +19,9 @@
   <body>
     <blockquote-base-embedded-webview heading="blockquote-directive-svg-to-data-image">
       <template data-src="./base.html" data-option="Base"></template>
+      <template data-src="./simple.html" data-option="Simple"></template>
     </blockquote-base-embedded-webview>
     
   
 
-<script type="module" src="./assets/inline-module-afc12870e222c2d823cdbcdc63d14554-71d7f6ae.js"></script></body></html>
+<script type="module" src="./assets/inline-module-afc12870e222c2d823cdbcdc63d14554-b3d11de7.js"></script></body></html>
