--- a/site/blockquote-directive-svg-to-data-image/simple.html
+++ b/site/blockquote-directive-svg-to-data-image/simple.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html lang="en"><head>
-    <title>Shared styles - Demo blockquote-base-style-helpers</title>
+    <title>Simple - blockquote-directive-svg-to-data-image</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <script src="./web_modules/@ungap/global-this/index.js"></script>
@@ -26,16 +26,17 @@
 
       body {
         background-color: #fff;
+        margin-top: 2rem;
       }
     </style>
   </head>
   <body>
     <main>
-      <h1 class="sr-only">blockquote-base-style-helpers</h1>
-      <shared-element></shared-element>
+      <h1 class="sr-only">blockquote-directive-svg-to-data-image</h1>
+      <bg-element></bg-element>
     </main>
 
     
   
 
-<script type="module" src="./assets/inline-module-13aa680e719be381c374916c8733bcca-2791acca.js"></script></body></html>
+<script type="module" src="./assets/inline-module-79cc782e08db142cc788af355b8122c4-3a5578f1.js"></script></body></html>
