chore: update site

--- a/site/index.html
+++ b/site/index.html
@@ -1,7 +1,9 @@
-<!DOCTYPE html><html lang="en"><head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Blockquote - Web Components</title>
     <style>
       :root {
@@ -9,18 +11,32 @@
         color: #495969;
       }
 
+      li {
+        padding-left: 0.5em;
+      }
+
+      ul {
+        list-style: none;
+        border-left: 1px dashed rgb(204, 204, 204);
+        margin-bottom: 1rem;
+        padding: 0.5em 0;
+        background-color: rgba(204, 204, 204, 0.2);
+      }
+
+      li li:first-child {
+        margin-bottom: 0.5rem;
+      }
+
       a {
         display: block;
         text-decoration: none;
         color: inherit;
-        margin: 0 0 1rem 0;
-        padding: 0.5em;
-        border-bottom: 1px solid rgb(204, 204, 204);
       }
+
       a:hover {
-        color: #ff974d;
-        border-bottom: 1px solid rgb(85, 85, 85);
+        color: #0b7cfb;
       }
+
       header .title {
         font-size: 2.25rem;
         line-height: 1;
@@ -30,7 +46,95 @@
   <body>
     <h1 class="title">Blockquote - Web Components</h1>
 
-    
-  
-
-<ol><li><a href="blockquote-directive-svg-to-data-image/index.html">blockquote-directive-svg-to-data-image</a></li><li><a href="blockquote-base-embedded-webview/index.html">blockquote-base-embedded-webview</a></li><li><a href="blockquote-base-meta/index.html">blockquote-base-meta</a></li><li><a href="blockquote-controller-rxjs/index.html">blockquote-controller-rxjs</a></li><li><a href="blockquote-base-style-helpers/index.html">blockquote-base-style-helpers</a></li><li><a href="blockquote-mixin-slot-content/index.html">blockquote-mixin-slot-content</a></li></ol></body></html>
+    <ol>
+      <li>
+        <ul>
+          <li>
+            <a href="blockquote-base-embedded-webview/index.html"
+              >• blockquote-base-embedded-webview</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/base/blockquote-base-embedded-webview/README.md"
+              >• readme</a
+            >
+          </li>
+        </ul>
+      </li>
+      <li>
+        <ul>
+          <li>
+            <a href="blockquote-base-meta/index.html">• blockquote-base-meta</a>
+          </li>
+          <li>
+            <a
+              href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/base/blockquote-base-meta/README.md"
+              >• readme</a
+            >
+          </li>
+        </ul>
+      </li>
+      <li>
+        <ul>
+          <li>
+            <a href="blockquote-base-style-helpers/index.html"
+              >• blockquote-base-style-helpers</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/base/blockquote-base-style-helpers/README.md"
+              >• readme</a
+            >
+          </li>
+        </ul>
+      </li>
+      <li>
+        <ul>
+          <li>
+            <a href="blockquote-controller-rxjs/index.html"
+              >• blockquote-controller-rxjs</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/controllers/blockquote-controller-rxjs/README.md"
+              >• readme</a
+            >
+          </li>
+        </ul>
+      </li>
+      <li>
+        <ul>
+          <li>
+            <a href="blockquote-directive-svg-to-data-image/index.html"
+              >• blockquote-directive-svg-to-data-image</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/directives/blockquote-directive-svg-to-data-image/README.md"
+              >• readme</a
+            >
+          </li>
+        </ul>
+      </li>
+      <li>
+        <ul>
+          <li>
+            <a href="blockquote-mixin-slot-content/index.html"
+              >• blockquote-mixin-slot-content</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/mixins/blockquote-mixin-slot-content/README.md"
+              >• readme</a
+            >
+          </li>
+        </ul>
+      </li>
+    </ol>
+  </body>
+</html>
