chore: update site

--- a/site/index.html
+++ b/site/index.html
@@ -50,34 +50,6 @@
       <li>
         <ul>
           <li>
-            <a href="blockquote-base-embedded-webview/index.html"
-              >• blockquote-base-embedded-webview</a
-            >
-          </li>
-          <li>
-            <a
-              href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/base/blockquote-base-embedded-webview/README.md"
-              >• readme</a
-            >
-          </li>
-        </ul>
-      </li>
-      <li>
-        <ul>
-          <li>
-            <a href="blockquote-base-meta/index.html">• blockquote-base-meta</a>
-          </li>
-          <li>
-            <a
-              href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/base/blockquote-base-meta/README.md"
-              >• readme</a
-            >
-          </li>
-        </ul>
-      </li>
-      <li>
-        <ul>
-          <li>
             <a href="blockquote-base-style-helpers/index.html"
               >• blockquote-base-style-helpers</a
             >
@@ -100,6 +72,34 @@
           <li>
             <a
               href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/controllers/blockquote-controller-rxjs/README.md"
+              >• readme</a
+            >
+          </li>
+        </ul>
+      </li>
+      <li>
+        <ul>
+          <li>
+            <a href="blockquote-base-embedded-webview/index.html"
+              >• blockquote-base-embedded-webview</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/base/blockquote-base-embedded-webview/README.md"
+              >• readme</a
+            >
+          </li>
+        </ul>
+      </li>
+      <li>
+        <ul>
+          <li>
+            <a href="blockquote-base-meta/index.html">• blockquote-base-meta</a>
+          </li>
+          <li>
+            <a
+              href="https://github.com/oscarmarina/blockquote-web-components/tree/main/packages/base/blockquote-base-meta/README.md"
               >• readme</a
             >
           </li>
@@ -136,5 +136,10 @@
         </ul>
       </li>
     </ol>
+    <p>
+      <a href="playground-dev/index.html"
+      >• playground-dev</a
+    >
+    </p>
   </body>
 </html>
