fix(blockquote-mixin-slot-content): exports and lighthouse

--- a/packages/mixins/blockquote-mixin-slot-content/demo/composition-with-slots.html
+++ b/packages/mixins/blockquote-mixin-slot-content/demo/composition-with-slots.html
@@ -4,6 +4,10 @@
     <title>Composition with slots - blockquote-mixin-slot-content</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
+    <meta
+      name="description"
+      content="Demo Composition with slots - blockquote-mixin-slot-content"
+    />
     <style>
       :root {
         font: normal medium/1.25 sans-serif;
