fix(blockquote-directive-svg-to-data-image): exports and lighthouse

--- a/packages/directives/blockquote-directive-svg-to-data-image/demo/base.html
+++ b/packages/directives/blockquote-directive-svg-to-data-image/demo/base.html
@@ -4,6 +4,7 @@
     <title>Base - blockquote-directive-svg-to-data-image</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
+    <meta name="description" content="Demo Base - blockquote-directive-svg-to-data-image" />
     <style>
       :root {
         /* https://stackoverflow.com/questions/42330075/is-there-a-way-to-interpolate-css-variables-with-url#answer-42331003 */
