--- a/packages/directives/blockquote-directive-svg-to-data-image/demo/index.html
+++ b/packages/directives/blockquote-directive-svg-to-data-image/demo/index.html
@@ -4,6 +4,7 @@
     <title>Demo - blockquote-directive-svg-to-data-image</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
+    <meta name="description" content="All Demos - blockquote-directive-svg-to-data-image" />
     <style>
       html,
       body {
