--- a/packages/directives/blockquote-directive-svg-to-data-image/demo/simple.html
+++ b/packages/directives/blockquote-directive-svg-to-data-image/demo/simple.html
@@ -4,6 +4,7 @@
     <title>Simple - blockquote-directive-svg-to-data-image</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
+    <meta name="description" content="Demo Simple - blockquote-directive-svg-to-data-image" />
     <style>
       :root {
         font: normal medium/1.25 sans-serif;
