--- a/packages/base/blockquote-base-style-helpers/demo/index.html
+++ b/packages/base/blockquote-base-style-helpers/demo/index.html
@@ -4,6 +4,7 @@
     <title>Demo - blockquote-base-style-helpers</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
+    <meta name="description" content="All Demos - blockquote-base-style-helpers" />
     <style>
       html,
       body {
