--- a/packages/base/blockquote-base-style-helpers/demo/shared-styles.html
+++ b/packages/base/blockquote-base-style-helpers/demo/shared-styles.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Shared styles - Demo blockquote-base-style-helpers</title>
+    <title>Shared styles - blockquote-base-style-helpers</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
+    <meta name="description" content="Demo Shared styles - blockquote-base-style-helpers" />
     <style>
       :root {
         font: normal medium/1.25 sans-serif;
