--- a/packages/base/blockquote-base-meta/demo/base.html
+++ b/packages/base/blockquote-base-meta/demo/base.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Base - Demo blockquote-base-meta</title>
+    <title>Base - blockquote-base-meta</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
+    <meta name="description" content="Demo Base - blockquote-base-meta" />
     <style>
       :root {
         font: normal medium/1.25 sans-serif;
