fix(blockquote-base-embedded-webview): exports and lighthouse

--- a/packages/base/blockquote-base-embedded-webview/demo/other.html
+++ b/packages/base/blockquote-base-embedded-webview/demo/other.html
@@ -4,6 +4,7 @@
     <title>Other - blockquote-base-embedded-webview</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
+    <meta name="description" content="Demo Other - blockquote-base-embedded-webview" />
     <style>
       :root {
         font: normal medium/1.25 sans-serif;
